Cleaned up the food lookup flow. Added unstyled support for the market locator.

--- a/www/index.html
+++ b/www/index.html
@@ -86,6 +86,7 @@
         <script type="text/javascript" src="js/controller/LocationCtrl.js"></script>
         <script type="text/javascript" src="js/controller/LoginCtrl.js"></script>
         <script type="text/javascript" src="js/controller/TobaccoCtrl.js"></script>
+        <script type="text/javascript" src="js/controller/MarketCtrl.js"></script>
         
     </body>
 </html>
