Added leaderboards and meal history. Cleaned up registration flow.

--- a/www/index.html
+++ b/www/index.html
@@ -82,8 +82,8 @@
         <script type="text/javascript" src="js/controller/NutritionCtrl.js"></script>
         <script type="text/javascript" src="js/controller/LocationCtrl.js"></script>
         <script type="text/javascript" src="js/controller/LoginCtrl.js"></script>
-        <script type="text/javascript" src="js/controller/TobaccoCtrl.js"></script>
-        <script type="text/javascript" src="js/controller/MarketCtrl.js"></script>
+        <script type="text/javascript" src="js/controller/BoardCtrl.js"></script>
+        <script type="text/javascript" src="js/controller/HistoryCtrl.js"></script>
         
     </body>
 </html>
