--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,7 @@
          -->
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
         <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css" />
+        <link rel="stylesheet" type="text/css" href="css/bootstrap-switch.min.css" />
         <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
         <link rel="stylesheet" type="text/css" href="css/core.css" />
         
@@ -68,6 +69,7 @@
         <script type="text/javascript" src="js/lib/angular/angular-route.min.js"></script>
         <script type="text/javascript" src="js/lib/angular/angular-resource.min.js"></script>
         <script type="text/javascript" src="js/lib/angular/angular-touch.min.js"></script>
+        <script type="text/javascript" src="js/lib/bootstrap/bootstrap-switch.min.js"></script>
         
         <script type="text/javascript" src="js/core.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
